--- a/api/appsettings.Development.json
+++ b/api/appsettings.Development.json
@@ -5,6 +5,7 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "StorageTableUri": "https://storageadapterhack.table.core.windows.net/", 
-  "StorageTableName": "tenantStorageMappings"
+  "StorageTableUri": "<your-storage-table-uri-include-'/'-at-the-end>", 
+  "StorageTableName": "<your-storage-table-name>",
+  "KeyVaultName": "<your-key-vault-uri>"
 }
