--- a/api/appsettings.json
+++ b/api/appsettings.json
@@ -5,5 +5,8 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "StorageTableUri": "<your-storage-table-uri-include-'/'-at-the-end>", 
+  "StorageTableName": "<your-storage-table-name>",
+  "KeyVaultName": "<your-key-vault-uri>"
 }
