--- a/api/appsettings.json
+++ b/api/appsettings.json
@@ -5,8 +5,5 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*",
-  "StorageTableUri": "<your-storage-table-uri-include-'/'-at-the-end>", 
-  "StorageTableName": "<your-storage-table-name>",
-  "KeyVaultName": "<your-key-vault-uri>"
+  "AllowedHosts": "*"
 }
