--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -16,9 +16,12 @@
             },
             "env": {
                 "ASPNETCORE_ENVIRONMENT": "Development",
-                "AZURE_CLIENT_ID": "f83d1020-1ef8-4db4-9b9d-04d3744bd476",
-                "AZURE_TENANT_ID":"4bb7d7b5-0ac2-4569-94e6-b715e9d43a5d",
-                "AZURE_CLIENT_SECRET": "V7h8Q~AnaV95eDLFbnPCkovGDYAFFhzP6KoX~aBF"
+                "AZURE_CLIENT_ID": "<client-id>",
+                "AZURE_TENANT_ID":"<tenant-id>",
+                "AZURE_CLIENT_SECRET": "<client-secret>",
+                "STORAGE_TABLE_URI": "https://<tableName>.table.core.windows.net/",
+                "KEYVAULT_NAME": "<keyVault-name>",
+                "STORAGE_TABLE_NAME": "tenantToStorageMapping"
             }
         },
         {
