--- a/.github/workflows/azure-dev.yml
+++ b/.github/workflows/azure-dev.yml
@@ -29,7 +29,8 @@ jobs:
     steps:
       - name: Checkout
         uses: actions/checkout@v3
-        submodules: true
+          with:
+            submodules: true
 
       - name: Pull & update submodules recursively
         run: |
