--- a/.gitmodules
+++ b/.gitmodules
@@ -1,4 +1,4 @@
-[submodule "api/storageAdapter.Models"]
-	path = api/storageAdapter.Models
-	url = https://github.com/becheng/storageAdapter.Models.git
-	branch=main
+[submodule "api/Models"]
+	path = api/Models
+	url = https://github.com/becheng/storage-adapter-models.git
+	branch = main
